# PythonTest1

./: README.md  README.rst  pyproject.toml
project/: settings.py
